# AlphaPulse

./: .#backend_v2_arch_control  .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  BANDWIDTH_ANALYSIS.md  CLAUDE.md  CLEANUP_SUMMARY.md  DIRECTORY_CLEANUP_PLAN.md  Makefile  README.md  README2.md  SECURITY.md  STYLE.md  check_sockets.py  cleanup.sh  docker-compose.rust.yml  docker-compose.yml  feed.md  frontend_cleanup.sh  goals.md  huff.md  huff2.md  journal.org  lat.py  launch_instructions.txt  matic_usdc_arbitrage_dryrun.js  model_param_optimization.md  package-lock.json  package.json  phase1_plan.md  pilot.md  prometheus.yml  push.md  questions_list.md  rpc_latency_results_1755295132.json  rust-migration.md  start-data-infra.sh  stop-data-infra.sh  strategy_runner.py  (+9 more)
backend/: .coverage  .coveragerc  ARBITRAGE_BOT_README.md  ARCHITECTURE_ALIGNMENT.md  Cargo.toml  Dockerfile.orchestrator  README.md  TARGET_ARCHITECTURE.md  WALLET_INFO.md  analyze_raw_swaps.py  app.py  app_fastapi.py  check_token_order.py  config.py  data_manager.py  data_preservation_report.json  database.py  debug_live_swaps.py  debug_orderbook.py  debug_price_calc.py  debug_raw_swap.py  debug_swap_hex.py  debug_symbols.py  exact_api_validation_report.json  external_api_validation.py  external_validation_report.json  generate_symbol_hashes.py  kraken_collector.py  live_collector.py  live_validation_report.json  metrics_aggregator.py  migrate_symbol_to_instrument.py  mock_data_generator.py  models.py  monitoring_queries.sql  nautilus_integration.py  pol_price_calculator.rs  pytest.ini  requirements.txt  run.sh  (+33 more)
backend/analytics/: jupyter_service.py  template_service.py
backend/api/: __init__.py  data_routes.py  data_routes_fastapi.py  dev_routes.py  dex_quoter.py  market_stats.py  metrics_routes.py  notebook_routes.py  notebook_routes_fastapi.py  realtime_routes.py  system_routes.py  system_websocket.py  terminal_routes.py  terminal_routes_fastapi.py  workspace_routes.py  workspace_routes_fastapi.py
backend/arbitrage_bot/: Cargo.toml
backend/backend/: demo_arbitrage_detection.js  run_scanner_test.sh
backend/config/: data_sources.yaml  data_writer.yaml
backend/contracts/: FlashArbitrage.sol  FlashLoanArbitrage.sol  README.md  hardhat.config.js  package.json
backend/core/: analysis_service.py  container.py  schemas.py  terminal_service.py
backend/defi/: HUFF.md  HUFF_HONEST_STATUS.md  HUFF_IMPLEMENTATION_STATUS.md  HUFF_REAL_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_COMPLETE_STATUS.md  INTEGRATION_COMPLETE.md  README.md  READY_FOR_MUMBAI_EXECUTION.md  RUNTIME_OPTIMIZATION_ANALYSIS.md  SPECIALIZED_VS_GENERAL_ANALYSIS.md
backend/integrations/: nautilus_catalog.py
backend/market_data/: coinbase_trades.json  kraken_ccxt_data.json  kraken_complete.json  kraken_data_full.json  kraken_ohlc_10days.json  kraken_ohlc_from_trades.json  kraken_trades_full.json  market_data.duckdb  market_data.duckdb.wal
backend/migrations/: init_multi_db.sh  init_timescale.sql
backend/notebook_templates/: arbitrage_basic.py  convergence_trading_analysis.py  kraken_signal_trading_analysis.py  tick_arbitrage_analysis.py  trade_data_analysis.py
backend/notebooks/: tick_arbitrage_analysis.py
backend/nt_reference/: README.md
backend/projects/: 2025-08-15_dex-data-pipeline-redesign.md
backend/protocol/: Cargo.toml
backend/protocol_v2/: Cargo.toml  README.md
backend/reports/: pair_comparison_20250815_230012.json
backend/repositories/: __init__.py  data_repository.py  protocols.py
backend/schema/: setup_database.sh  timescaledb_schema.sql
backend/schemas/: __init__.py  market_data.py
backend/scripts/: auto_executor.py  check-balance.js  check_both_fees.py  check_data.sql  check_link.py  check_min_size.py  check_v3_fee.py  com.alphapulse.exchange-collector-alpaca.plist  com.alphapulse.exchange-collector-coinbase.plist  com.alphapulse.exchange-collector-kraken.plist  com.alphapulse.relay.plist  com.alphapulse.ws-bridge.plist  compile_contract.js  daemon-manager.sh  debug_dystopia_failure.py  exact_liquidity_both.py  execute_dystopia.py  execute_dystopia_private.py  execute_now.py  execute_with_router.py  fast_scanner.py  fetch_and_save_kraken.py  fetch_kraken_ccxt.py  fetch_kraken_full.py  fetch_kraken_recent.py  fetch_kraken_trades.py  fix_liquidity_calc.py  fix_scanner.py  generate-wallet.js  package-lock.json  package.json  pids.txt  router_registry.json  setup_routers.py  simple_ankr_test.py  start-arbitrage.sh  start-polygon-only.sh  start.sh  status.sh  stop.sh  (+6 more)
backend/services/: __init__.py  analysis_service.py  data_service.py  db_manager.py  jupyter_service.py  market_data.py  postgres_setup.py  redis_stream_consumer.py  template_service.py  terminal_service.py  trade_recorder_service.py  websocket_recorder.py  workspace_service.py
backend/tests/: README.md  __init__.py  conftest.py  numerical_accuracy_test.rs
backend/utils/: validation.py
backend_v2/: .bashrc_query_builder  .bashrc_workspace  .gitignore  .pre-commit-config.yaml  .rq.toml  ALPHAPULSE_COMPREHENSIVE_STATUS_REPORT.md  CLAUDE.md  CLEANUP_FIX_PLAN.md  Cargo.toml  Cargo_precision.toml  Cargo_temp.toml  GEMINI-2.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  README.org  TEST_RESULTS.md  check_sizes  clippy.toml  debug_message_headers.rs  debug_signal_reader.py  debug_subscription.rs  debug_tlv_sizes.rs  debug_websocket_issue.py  inject_fake_pool_events.js  live_polygon_stream_demo.rs  polygon.toml  polygon_http.toml  polygon_simple.toml  profile_tlv_bottlenecks.rs  serialization_bench.py  simple_profile.sh  start_e2e_pipeline.sh  test_actual  test_actual.rs  test_alternative_polygon_endpoints.rs  test_broader_subscription.rs  test_config_signatures.rs  test_continuous_live_streaming.rs  test_dashboard_relay_bridge.rs  test_demo_defi_size  (+41 more)
rust-services/: COLLECTOR_DEVELOPMENT_GUIDE.md  Cargo.toml  Dockerfile  LOAD_TEST_RESULTS.md  PRODUCTION_DEPLOYMENT.md  README.md  WEBSOCKET_ARCHITECTURE_FIX.md  build.sh  config.toml  rust-migration.md  test_arbitrage.py  test_atomic_shm.rs  test_websocket_client.py  test_ws.html
(+2079 files in other folders)
