[workspace]
members = [
    "protocol", 
    "protocol_v2",
    "services/data_writer",
    "services/exchange_collector",
    "services/relay_server",
    "services/signal_relay",
    "services/ws_bridge",
    "services/defi/scanner",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AlphaPulse"]

[workspace.dependencies]
# Core dependencies
alphapulse-protocol = { path = "protocol" }
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"
zerocopy = { version = "0.7", features = ["derive"] }
byteorder = "1.5"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
futures-util = "0.3"
url = "2.5"
dashmap = "6.0"
parking_lot = "0.12"
once_cell = "1.19"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
chrono = "0.4"
rust_decimal = "1.37"
rand = "0.8"

# DeFi-specific dependencies
ethers = "2.0"
web3 = "0.19"

# Additional dependencies
crc32fast = "1.4"
toml = "0.8"
hex = "0.4"
blake3 = "1.5"
uuid = { version = "1.10", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
