[package]
name = "arbitrage_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
chrono = "0.4"

# For MEV protection
ethers-flashbots = "0.1"

# Database for tracking
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

# Metrics
prometheus = "0.13"
axum = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"