[package]
name = "alphapulse-protocol"
version.workspace = true
edition.workspace = true

[[bin]]
name = "test_bijective_protocol"
path = "../test_bijective_protocol.rs"

[dependencies]
zerocopy = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
rust_decimal = "1.34"
hex = "0.4"
dashmap = "5.5"
anyhow = { workspace = true }
serde_json = "1.0"
num_enum = "0.7"
crc32fast = "1.4"
tokio = { workspace = true }

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"