[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
# time module is now internal (network/src/time/) - no external dependencies needed for time functions
chrono = "0.4"

# Core networking
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
bytes = "1.9"
futures = "0.3"

# Error handling and logging
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Unix socket support
nix = { version = "0.29", features = ["fs"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }

# Performance monitoring
prometheus = { version = "0.13", optional = true }
metrics = { version = "0.23", optional = true }

[dev-dependencies]
types = { workspace = true }  # Only for tests/benchmarks
criterion = "0.5"
proptest = "1.7"
tempfile = "3.8"
test-log = "0.2"
env_logger = "0.11"

[features]
default = []
monitoring = ["prometheus", "metrics"]
