[package]
name = "protocol_v2"
version = "0.1.0"
edition = "2021"
description = "AlphaPulse TLV-based universal message protocol"

[dependencies]
zerocopy = { version = "0.7", features = ["derive"] }
byteorder = "1.5"
thiserror = "1.0"
num_enum = "0.7"
crc32fast = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
hex = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
web3 = "0.19"
serde_json = "1.0"
futures-util = "0.3"
rust_decimal = "1.37.2"
chrono = "0.4"
alphapulse-adapter-service = { path = "../services_v2/adapters" }

[lib]
name = "protocol_v2"
path = "src/lib.rs"



[[bin]]
name = "test_protocol"
path = "src/bin/test_protocol.rs"


# [[bin]]
# name = "integration_test"
# path = "src/bin/integration_test.rs"

# [[bin]]
# name = "performance_test"
# path = "src/bin/performance_test.rs"

[[bin]]
name = "debug_tlv_parsing"
path = "src/bin/debug_tlv_parsing.rs"

[[bin]]
name = "test_fixed_parsing"
path = "src/bin/test_fixed_parsing.rs"

# [[bin]]
# name = "live_e2e_test"
# path = "../live_e2e_test.rs"

# [[bin]]
# name = "semantic_correctness_proof"
# path = "../semantic_correctness_proof.rs"

# [[bench]]
# name = "throughput_benchmark"
# harness = false
