[package]
name = "protocol_v2"
version.workspace = true
edition.workspace = true
description = "AlphaPulse TLV-based universal message protocol"

[dependencies]
# Core protocol dependencies (always required)
zerocopy = { version = "0.7", features = ["derive"] }
byteorder = "1.5"
thiserror = "1.0"
num_enum = "0.7"
anyhow = "1.0"
hex = "0.4"  # Always required for instrument IDs and trace formatting

# Workspace dependencies
alphapulse-types = { path = "../libs/types" }

# Optional dependencies controlled by features
crc32fast = { version = "1.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "io-util", "time", "macros"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
# hex moved to core dependencies
clap = { version = "4.0", features = ["derive"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
hex = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
web3 = "0.19"
serde_json = "1.0"
futures-util = "0.3"
rust_decimal = "1.37.2"
chrono = "0.4"
# Removed circular dependency - tests should mock adapter behavior instead
# alphapulse-adapter-service = { path = "../services_v2/adapters" }

[features]
default = ["checksum-validation", "serialization", "runtime"]

# Core protocol features
checksum-validation = ["dep:crc32fast"]         # CRC32 checksums for message integrity
serialization = ["dep:serde", "dep:serde_json"]     # JSON serialization support
binary-protocol = []                               # Binary TLV protocol (always included)

# Runtime and async support
runtime = ["dep:tokio", "dep:async-trait"]           # Async runtime support
observability = ["dep:tracing", "dep:tracing-subscriber"]  # Distributed tracing support

# Development and debugging
debug-tools = ["dep:clap"]                # Debugging utilities and CLI tools (hex always available)
yaml-config = ["dep:serde_yaml"]                     # YAML configuration support

# Performance-focused feature sets
high-performance = ["binary-protocol"]               # Minimal features for speed
full-featured = ["checksum-validation", "serialization", "runtime", "observability", "debug-tools", "yaml-config"]

[lib]
name = "protocol_v2"
path = "src/lib.rs"



[[bin]]
name = "test_protocol"
path = "src/bin/test_protocol.rs"


# [[bin]]
# name = "integration_test"
# path = "src/bin/integration_test.rs"

# [[bin]]
# name = "performance_test"
# path = "src/bin/performance_test.rs"

[[bin]]
name = "debug_tlv_parsing"
path = "src/bin/debug_tlv_parsing.rs"
required-features = ["observability"]

[[bin]]
name = "test_fixed_parsing"
path = "src/bin/test_fixed_parsing.rs"
required-features = ["observability"]

# [[bin]]
# name = "live_e2e_test"
# path = "../live_e2e_test.rs"

# [[bin]]
# name = "semantic_correctness_proof"
# path = "../semantic_correctness_proof.rs"

[[bench]]
name = "message_builder_comparison"
harness = false
