[package]
name = "alphapulse-relays"
version = "0.1.0"
edition = "2021"
description = "High-performance message relay infrastructure for AlphaPulse"

[dependencies]
# Core protocol
protocol_v2 = { path = "../protocol_v2", package = "protocol_v2" }

# Transport and topology
alphapulse-transport = { path = "../network/transport" }
alphapulse-topology = { path = "../network/topology" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"

# Utilities
crc32fast = "1.4"
config = "0.13"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Collections and utilities
dashmap = "5.5"
bytes = "1.5"
futures = "0.3"
bincode = "1.3"

# Command line
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "alphapulse_relays"
path = "src/lib.rs"

[[bin]]
name = "relay"
path = "bin/relay.rs"

[[bin]]
name = "relay_dev"
path = "bin/relay_dev.rs"

[[bin]]
name = "simple_relay_starter"
path = "bin/simple_relay_starter.rs"

[[bin]]
name = "market_data_relay"
path = "src/bin/market_data_relay.rs"

[[bin]]
name = "signal_relay"
path = "src/bin/signal_relay.rs"

[[bin]]
name = "execution_relay"
path = "src/bin/execution_relay.rs"

[[bench]]
name = "relay_throughput"
harness = false