[package]
name = "alphapulse-relays"
version = "0.1.0"
edition = "2021"
description = "High-performance message relay infrastructure for AlphaPulse"

[dependencies]
# Core protocol
protocol_v2 = { path = "../protocol_v2", package = "protocol_v2" }

# Transport and topology
alphapulse-transport = { path = "../network/transport" }
alphapulse-topology = { path = "../network/topology" }

# Service infrastructure
alphapulse-health-check = { path = "../libs/health_check" }
alphapulse-service-discovery = { path = "../libs/service_discovery" }

# Async runtime - configurable features for different relay types
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "io-util", "time", "macros"] }
async-trait = "0.1"

# Configuration - optional features for complex deployments
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9", optional = true }  # Only needed for YAML config files
toml = { version = "0.8", optional = true }        # Only needed for TOML config files

# Performance utilities - optional features
crc32fast = { version = "1.4", optional = true }   # Only needed for checksum validation
config = { version = "0.13", optional = true }     # Only needed for advanced config

# Core logging - always required
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling - always required
anyhow = "1.0"
thiserror = "1.0"

# Collections and utilities - some optional
dashmap = "5.5"                                    # Always needed for connection management
bytes = "1.5"                                      # Always needed for message handling
futures = "0.3"                                    # Always needed for async operations
bincode = { version = "1.3", optional = true }     # Only needed for binary serialization
chrono = { version = "0.4", features = ["serde"], optional = true }  # Only needed for timestamps

# Command line - always required for binaries
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["config-files", "checksum-validation", "timestamps"]

# Configuration file format support
config-files = ["dep:serde_yaml", "dep:toml", "dep:config"]
yaml-config = ["dep:serde_yaml"]
toml-config = ["dep:toml"]

# Performance and security features
checksum-validation = ["dep:crc32fast"]          # Required for execution relay
binary-serialization = ["dep:bincode"]          # For high-performance serialization
timestamps = ["dep:chrono"]                      # For message timestamps and tracing

# Relay-specific feature combinations
market-data-relay = ["binary-serialization", "timestamps"]  # Speed-focused
signal-relay = ["config-files", "timestamps"]               # Balanced features
execution-relay = ["checksum-validation", "config-files", "timestamps"]  # Security-focused

[lib]
name = "alphapulse_relays"  # Keep underscore for lib name to match existing imports
path = "src/lib.rs"

[[bin]]
name = "relay"
path = "bin/relay.rs"

[[bin]]
name = "relay_dev"
path = "bin/relay_dev.rs"

[[bin]]
name = "simple_relay_starter"
path = "bin/simple_relay_starter.rs"

# Domain-specific relay binaries moved to separate crates:
# - market_data_relay → relays/market_data_relay/
# - signal_relay → relays/signal_relay/
# - execution_relay → relays/execution_relay/

[[bench]]
name = "relay_throughput"
harness = false
