[package]
name = "alphapulse-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
alphapulse-common = { path = "../common" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
arrow = "53.0"
parquet = "53.0"