[package]
name = "alphapulse-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "alphapulse_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
numpy = "0.20"
chrono = { version = "0.4", features = ["serde"] }

# AlphaPulse common dependencies
alphapulse-common = { path = "../common" }

[dependencies.pyo3-asyncio]
version = "0.20"
features = ["tokio-runtime"]