[package]
name = "alphapulse-collectors"
version = "0.1.0"
edition = "2021"

[dependencies]
alphapulse-common = { path = "../common" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
dotenvy = { workspace = true }
metrics = { workspace = true }
futures-util = "0.3"
async-trait = "0.1"