[package]
name = "alphapulse-load-tester"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "load-tester"
path = "src/main.rs"

[dependencies]
alphapulse-common = { path = "../common" }
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
hdrhistogram = "7.5"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
sysinfo = "0.31"

[dev-dependencies]
criterion = "0.5"