[package]
name = "arbitrage-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arbitrage-bot"
path = "src/main.rs"

[dependencies]
alphapulse-protocol = { path = "../../protocol" }
anyhow = "1.0"
async-trait = "0.1"
byteorder = "1.5"
dashmap = "5.5"
ethers = "2.0"
futures = "0.3"
hex = "0.4"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zerocopy = "0.7"

[dependencies.ethers-core]
version = "2.0"
features = ["abigen"]

[dependencies.ethers-contract]
version = "2.0"
features = ["abigen-online"]