[package]
name = "capital-arb-bot"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "capital-arb-bot"
path = "src/main.rs"

[[bin]]
name = "check-balance"
path = "src/bin/check_balance.rs"

[dependencies]
alphapulse-protocol = { path = "../../protocol" }
anyhow = "1.0"
async-trait = "0.1"
byteorder = "1.5"
dashmap = "5.5"
dotenv = "0.15"
ethers = "2.0"
futures = "0.3"
hex = "0.4"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
web3 = "0.19"


[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"
