[workspace]
members = [
    "arbitrage",    # New unified service
    "scanner", 
    # Deprecated - use unified arbitrage service instead
    # "capital_arbitrage",
    # "flash_loan",
    # "arbitrage_bot",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AlphaPulse"]

[workspace.dependencies]
# Core dependencies
alphapulse-protocol = { path = "../../protocol" }
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# DeFi-specific dependencies
ethers = "2.0"
web3 = "0.19"
rust_decimal = "1.37"

# Async and utilities
futures-util = "0.3"
dashmap = "6.0"
parking_lot = "0.12"
once_cell = "1.19"
chrono = "0.4"
byteorder = "1.5"
zerocopy = { version = "0.7", features = ["derive"] }

# Metrics and monitoring
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"