[package]
name = "exchange-collector"
version.workspace = true
edition.workspace = true

[[bin]]
name = "exchange-collector"
path = "src/main.rs"

[dependencies]
alphapulse-protocol = { path = "../../protocol" }
zerocopy = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
crossbeam-channel = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }