[package]
name = "exchange-collector"
version.workspace = true
edition.workspace = true

[[bin]]
name = "exchange-collector"
path = "src/main.rs"

[[bin]]
name = "generate-hashes"
path = "src/bin/generate_hashes.rs"

[[bin]]
name = "test-components"
path = "src/bin/test_components.rs"

[dependencies]
alphapulse-protocol = { path = "../../protocol" }
async-trait = "0.1"
zerocopy = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
crossbeam-channel = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = { workspace = true }
rand = { workspace = true }